--- a/Graphics.vcxproj.filters
+++ b/Graphics.vcxproj.filters
@@ -48,4 +48,8 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="resources\shaders\shaders\mvplite.vert" />
+    <None Include="resources\shaders\shaders\Debug\mvplite.frag" />
+  </ItemGroup>
 </Project>
