--- a/Graphics.vcxproj.filters
+++ b/Graphics.vcxproj.filters
@@ -18,16 +18,13 @@
     <ClCompile Include="source\Context.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="source\Draw.cpp">
+    <ClCompile Include="source\RenderObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="source\GenShape.cpp">
+    <ClCompile Include="source\draw.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="source\Load.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="source\RenderObjects.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -35,16 +32,16 @@
     <ClInclude Include="include\graphics\Context.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="source\glincl.h">
+    <ClInclude Include="source\glinc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\graphics\Vertex.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\graphics\Draw.h">
+    <ClInclude Include="include\graphics\RenderObjects.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="include\graphics\GenShape.h">
+    <ClInclude Include="include\graphics\draw.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\graphics\Load.h">
