figure out why it aint drawing shadows

--- a/test/09-Shadows/09-Shadows.vcxproj
+++ b/test/09-Shadows/09-Shadows.vcxproj
@@ -18,6 +18,9 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\..\..\..\..\Sergei%27s PC\Source\Repos\HelloTriangle2\test\09-Shadows\main.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{3731DEAB-7556-4AE9-810E-D44BB7A27B0C}</ProjectGuid>
     <RootNamespace>My09Shadows</RootNamespace>
@@ -114,9 +117,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="..\Graphics-master\test\06-Lights\main.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
