--- a/resources/shaders/shaders.vcxproj
+++ b/resources/shaders/shaders.vcxproj
@@ -110,6 +110,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <None Include="..\..\..\..\..\..\Sergei%27s PC\Source\Repos\HelloTriangle2\resources\shaders\direct.frag" />
     <None Include="cube.frag" />
     <None Include="cube.vert" />
     <None Include="direct.vert" />
