--- a/resources/shaders/shaders.vcxproj.filters
+++ b/resources/shaders/shaders.vcxproj.filters
@@ -60,5 +60,8 @@
     <None Include="direct.vert">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="..\..\..\..\..\..\Sergei%27s PC\Source\Repos\HelloTriangle2\resources\shaders\direct.frag">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
