--- a/Graphics.vcxproj
+++ b/Graphics.vcxproj
@@ -132,16 +132,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="GameObjects.cpp" />
     <ClCompile Include="source\Context.cpp" />
     <ClCompile Include="source\draw.cpp" />
+    <ClCompile Include="source\GameObjects.cpp" />
     <ClCompile Include="source\Load.cpp" />
     <ClCompile Include="source\RenderObject.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GameObjects.h" />
     <ClInclude Include="include\graphics\Context.h" />
     <ClInclude Include="include\graphics\draw.h" />
+    <ClInclude Include="include\graphics\GameObjects.h" />
     <ClInclude Include="include\graphics\Load.h" />
     <ClInclude Include="include\graphics\RenderObjects.h" />
     <ClInclude Include="include\graphics\Vertex.h" />
