--- a/resources/shaders/shaders.vcxproj
+++ b/resources/shaders/shaders.vcxproj
@@ -110,12 +110,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <None Include="..\..\..\..\..\..\Sergei%27s PC\Source\Repos\HelloTriangle2\resources\shaders\direct.frag" />
+    <None Include="Assessment.frag" />
+    <None Include="Assessment.vert" />
+    <None Include="cpass.frag" />
+    <None Include="cpass.vert" />
     <None Include="cube.frag" />
     <None Include="cube.vert" />
+    <None Include="Cubemap.frag" />
+    <None Include="Cubemap.vert" />
+    <None Include="direct.frag" />
     <None Include="direct.vert" />
+    <None Include="Feedback.geo" />
+    <None Include="Feedback.vert" />
+    <None Include="gpass.frag" />
+    <None Include="gpass.vert" />
     <None Include="lambert.frag" />
     <None Include="lambert.vert" />
+    <None Include="lpassD.frag" />
+    <None Include="lpassD.vert" />
     <None Include="mvplite.frag" />
     <None Include="mvplite.vert" />
     <None Include="quad.frag" />
