--- a/test/10-Deferred/10-Deferred.vcxproj
+++ b/test/10-Deferred/10-Deferred.vcxproj
@@ -19,8 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{E00F1E13-6FE0-4C59-85B6-C3539CA2B1C2}</ProjectGuid>
-    <RootNamespace>shaders</RootNamespace>
+    <ProjectGuid>{23D57F60-558B-4069-BECF-0C40C440088D}</ProjectGuid>
+    <RootNamespace>My10Deferred</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -74,7 +74,12 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>$(SolutionDir)include\</AdditionalIncludeDirectories>
     </ClCompile>
+    <Link>
+      <AdditionalLibraryDirectories>$(SolutionDir)$(Configuration)\</AdditionalLibraryDirectories>
+      <AdditionalDependencies>graphics.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -110,28 +115,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <None Include="cpass.frag" />
-    <None Include="cpass.vert" />
-    <None Include="cube.frag" />
-    <None Include="cube.vert" />
-    <None Include="direct.frag" />
-    <None Include="direct.vert" />
-    <None Include="gpass.frag" />
-    <None Include="gpass.vert" />
-    <None Include="lambert.frag" />
-    <None Include="lambert.vert" />
-    <None Include="lpassD.frag" />
-    <None Include="lpassD.vert" />
-    <None Include="mvplite.frag" />
-    <None Include="mvplite.vert" />
-    <None Include="quad.frag" />
-    <None Include="quad.vert" />
-    <None Include="shadow.frag" />
-    <None Include="shadow.vert" />
-    <None Include="standard.frag" />
-    <None Include="standard.vert" />
-    <None Include="test.frag" />
-    <None Include="test.vert" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
